--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "hardhat": "^2.12.7"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.2.2",
-    "ethers": "^5.7.2"
+    "@nomiclabs/hardhat-ethers": "^2.2.2"
   }
 }
